# Copyright (c) 2022-2024, PostgreSQL Global Development Group

contrib_mod_args = pg_mod_args

contrib_data_dir = dir_data_extension
contrib_data_args = {
  'install_dir': contrib_data_dir,
}

contrib_doc_dir = dir_doc_extension
contrib_doc_args = {
  'install_dir': contrib_doc_dir,
}

subdir('amcheck')
subdir('auth_delay')
subdir('auto_explain')
subdir('basic_archive')
subdir('bloom')
subdir('basebackup_to_shell')
subdir('bool_plperl')
subdir('btree_gin')
subdir('btree_gist')
subdir('citext')
subdir('cube')
subdir('dblink')
subdir('dict_int')
subdir('dict_xsyn')
subdir('earthdistance')
subdir('file_fdw')
subdir('fuzzystrmatch')
subdir('hstore')
subdir('hstore_plperl')
subdir('hstore_plpython')
subdir('intagg')
subdir('intarray')
subdir('isn')
subdir('jsonb_plperl')
subdir('jsonb_plpython')
subdir('lo')
subdir('ltree')
subdir('ltree_plpython')
subdir('oid2name')
subdir('pageinspect')
subdir('passwordcheck')
subdir('pg_buffercache')
subdir('pgcrypto')
subdir('pg_freespacemap')
subdir('pg_logicalinspect')
subdir('pg_prewarm')
subdir('pgrowlocks')
subdir('pg_stat_statements')
subdir('pgstattuple')
subdir('pg_surgery')
subdir('pg_trgm')
subdir('pg_visibility')
subdir('pg_walinspect')
subdir('postgres_fdw')
subdir('seg')
subdir('sepgsql')
subdir('spi')
subdir('sslinfo')
# start-scripts doesn't contain build products
subdir('tablefunc')
subdir('tcn')
subdir('test_decoding')
subdir('tsm_system_rows')
subdir('tsm_system_time')
subdir('unaccent')
subdir('uuid-ossp')
subdir('vacuumlo')
subdir('xml2')
