[package]
name = "sharding"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "full"] }
postgres = "0.19"
core-foundation = "0.9.4"
rust_decimal = {version = "1.35.0", features = ["db-postgres"]}
users = "0.11.0"
async-trait = "0.1.80"
futures = "0.3.30"
inline_colorization = "0.1.6"
rust-crypto = "^0.2"
regex = "1.10.5"
serde_yaml = "0.9.34"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.204"
sysinfo = "0.30.13"
indexmap = "2.5.0"
actix = "0.13.5"
actix-rt = "2.0"
raft = { git = "https://github.com/isoprophlex/raft", branch = "master" }
# raft = { path = "../../raft" }


[lib]
name = "sharding"
crate-type = ["lib", "staticlib"]
